# cs

./: README.md
6/: .nfs000000000d560c3200000ea7  Makefile  README.txt  code.s  codegeneration.cpp  lang  lexer.cpp  mt.good.lang  myoutfile  parser.cpp  parser.hpp  parser.y  result.txt  test  typecheck.cpp
CS160Project5/: .nfs00000000153c157900000001  lang  parser.cpp  parser.output  parser.y  typecheck.cpp
fs/: .nfs000000001232039a000001b7  README.md  bitarray.cpp  fs.cpp  fs.h  makefile  myfs.h  t1  t2  t3  t4  test  test.c
midterm/: c  code.cpp
sync/: .nfs000000001ab803a7000003c2  .nfs000000001ab8093e000003db  README.md  b  basic  makefile  sem.cpp  semaphore.cpp  test  test.cpp  threads.cpp  threads.h
threads/: .gitignore  .nfs000000000f4430a0000000d2  Makefile  README.md  basic  (+43 more)
threads/biscuit/Proj2 Multiprogramming/Proj2 Multiprogramming/: CMakeLists.txt  README.md
threads/biscuit/Proj2 Multiprogramming/Proj2 Multiprogramming/userprog/: Makefile  P2_Report  addrspace.cc  addrspace.h  bitmap.cc  bitmap.h  deps.mk  exception.cc  memorymanager.cc  memorymanager.h  openfilemanager.cc  openfilemanager.h  pcb.cc  pcb.h  processmanager.cc  processmanager.h  progtest.cc  scp.sh  syscall.h  sysopenfile.cc  sysopenfile.h  useropenfile.cc  useropenfile.h
threads/biscuit/Proj2 Multiprogramming/Proj2 Multiprogramming/userprog-hint/changed/: exception.cc  processmanager.cc
threads/biscuit/Proj2 Multiprogramming/Proj2 Multiprogramming/userprog-hint/nochange/: addrspace.h  memorymanager.cc  memorymanager.h  openfilemanager.h  pcb.h  processmanager.h  sysopenfile.h
(+199 files in other folders)
